# SEO-Health-Report-System

./: .agent-context  .env.example  .gitignore  B2B_KEYWORD_STRATEGY.md  CLAUDE.md  COMPLETION.md  CONTRIBUTING.md  DEVLOG.md  Dockerfile  HANDOFF.md  PLAN.md  PROGRESS.md  README.md  SKILL_IMPLEMENTATION_PLAN.md  alembic.ini  api_server.py  auth.py  code_surgeon_task.md  database.py  debug_import.py  docker-compose.production.yml  docker-compose.yml  docker-compose.yml.bak.topg  generate_free_report.py  generate_html_report.py  generate_one_pager.py  generate_premium_report.py  generate_tier_comparison.py  kiro-cli.cmd  kiro_cli.py  payments.py  pyproject.toml  pytest.ini  rate_limiter.py  run_audit.py  run_premium_audit.py  security_task.md  setup-pipeline-v2.sh  sheetmetal_audit_commercial.json  sheetmetal_audit_high.json  (+8 more)
.agent/workflows/: clean-pdf-report.md
.agents/code-review-fixes/: pdf-export-review-fixes.md
.agents/code-reviews/: pdf-export-review.md
.agents/plans/: add-competitor-dashboard.md  add-email-delivery.md  add-pdf-export.md  create-scheduled-audits.md  implement-api-caching.md
.agents/system-reviews/: pdf-export-review.md
.audit-venv/: pyvenv.cfg
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml  ci.yml  deploy-production.yml  deploy-staging.yml  docker-build.yml  docker.yml  lint.yml  rollback.yml  test.yml
.kiro/: .circuit_breaker  CODE_IMPROVEMENTS.md  CODE_REVIEW_2026-01-13.md  QUICK_FIXES.md  RAAPTECH_VOICE_INTEGRATION.md  REVIEW_SUMMARY.md  TIER_IMPLEMENTATION_SUMMARY.md  TIER_SYSTEM_STATUS.md  metrics.csv  review-110-percent.md
.kiro/agents/: README.md  aeo-grader.json  agent-creator-ralph.json  agent-creator.json  code-surgeon-ralph.json  code-surgeon.json  db-wizard-ralph.json  db-wizard.json  devops-automator-ralph.json  devops-automator.json  doc-smith-ralph.json  doc-smith.json  frontend-designer-ralph.json  frontend-designer.json  logic-reviewer.json  orchestrator.json  ralph-master.json  security-reviewer.json  security-specialist.json  strands-agent.json  style-reviewer.json  test-architect-ralph.json  test-architect.json  type-reviewer.json
.kiro/commands/: spec-workflow.md
.kiro/examples/: sample-plan.md  sample-progress.md
.kiro/handoffs/: 20260112_214546-code-surgeon-review-calculate_sco.md  20260112_215313-target-test-task.md  20260112_215323-target-test-task.md
.kiro/hooks/: completion-validation.kiro.hook  frontend-dev-agent.kiro.hook  progress-update.kiro.hook  quality-gate.kiro.hook  ralph-stop.sh  session-reflect.kiro.hook
.kiro/lib/: agent_schema.py  binding_system.py  evolution_engine.py  handoff_protocol.py  improvement_loop.py  verification_layer.py
.kiro/prompts/: README.md  a11y-audit.md  apply-evolution.md  code-review-fix.md  code-review-swarm.md  code-review.md  create-plan.md  create-prd.md  deploy-checklist.md  execute.md  execution-report.md  github-pr-watch.md  github-workflow.md  handoff-complete.md  handoff-create.md  implement-plan.md  memory.md  next-task.md  plan-feature.md  prime.md  quickstart.md  raaptech-report-writer.md  ralph-prd.md  rca.md  reflect.md  security-audit.md  self-reflect.md  strands-review.md  system-review.md  test-coverage.md  verify-changes.md  verify-evolution.md  workflow-status.md
.kiro/scripts/: check-pr-status.sh  merge-pr.sh  (+6 more)
ai-visibility-audit/: README.md  __init__.py  basic_test.py  direct_test.py  mock_config.py  requirements.txt  test_aeo_engine.py
competitive-intel/: __init__.py  analyzer.py  api.py  battlecards.py  gap_analyzer.py  market_intelligence.py  models.py  premium_report_integration.py  pricing_intel.py  roi_calculator.py
competitive-monitor/: alerts.py  api.py  main.py  models.py  monitor.py  requirements.txt  scheduler.py  storage.py
competitive_intel/: __init__.py  analyzer.py  api.py  battlecards.py  gap_analyzer.py  market_intelligence.py  models.py  premium_report_integration.py  pricing_intel.py  roi_calculator.py
competitive_monitor/: __init__.py  alerts.py  api.py  main.py  models.py  monitor.py  scheduler.py  storage.py
config/: production.env.template  report_profiles.yaml  tier_high.env  tier_low.env  tier_medium.env
conversion-ux-audit/: __init__.py
docs/: AUDIT.md  Analyzing some of the top 5 SEO companies that cha.docx  CACHE_IMPLEMENTATION.md  COMPETITIVE_ANALYSIS.md  COMPETITIVE_GAP_ANALYSIS.md  COMPLETE_SYSTEM_README.md  DEEP_AUDIT_FINDINGS.md  DEPLOYMENT_CHECKLIST.md  ENTERPRISE_ENHANCEMENTS.md  FINAL_REPUTATION_VERIFICATION.md  PHASE1_EXECUTION_PLAN.md  PLAN.md  PREMIUM_REPORTS.md  PROGRESS.md  PROJECT_ALIGNMENT_AUDIT.md  RALPH_LOOP_DOCS.md  REPUTATION_ANALYSIS.md  REPUTATION_SAFE_FINAL.md  ROLLBACK_PROCEDURE.md  SECRETS.md  audits.md  jobs.md  reports.md  security.md  seo_ai_audit_platform-comp.md  webhooks.md
frontend/: App.jsx  FRONTEND_BUILD_PLAN.md  package-lock.json  package.json  tailwind.config.js
infrastructure/: deploy.sh  docker-compose.prod.yml
local-gbp-audit/: __init__.py
multi-tier-reports/: __init__.py  api.py  models.py  pricing_optimizer.py  report_customizer.py  tier_classifier.py
raaptech-branding-skill/: SKILL 2.md
scripts/: check_metrics.py  ooda_orchestrator.py  orchestrator-ralph.json  post_deploy_monitor.sh  progress-tracker.py  ralph-dashboard.py  ralph-runner.py  run_migrations.sh  run_sheetmetalwerks_audit.py  setup_basic_assets.py  smoke_test.py  start-ralph.sh  stop-ralph.sh  sync_plan_to_github.py  task-picker.py  verify_phase2.py  verify_release.sh  verify_reputation_safety.py
seo-content-authority/: README.md  __init__.py  requirements.txt
seo-health-report/: __init__.py  benchmark.py  business_profiles.py  config.py  requirements.txt
seo-technical-audit/: README.md  SKILL.md  __init__.py  requirements.txt
social-media-audit/: __init__.py  social_media_audit.py
tests/: README.md  __init__.py  conftest.py  debug_ai_presence.py  test_cache.py  test_full_audit.py  test_memory_cache.py  test_premium_report.py  test_rate_limiter.py  test_rate_limiter_enhanced.py  test_redaction.py  test_safe_fetch.py  test_webhook.py
tools/: admin_asset_manager.py
(+362 files in other folders)
